tcp/build-win32-noconsole/meson-logs/meson-log.txt
Build started at 2020-12-29T03:11:53.459702
Main binary: /usr/bin/python3
Build Options: -Db_lto=true -Dcrossbuild_windows=true -Dcompile_server=false -Dwindows_noconsole=true -Dportable=true -Dbuildtype=release -Dstrip=True '--cross-file cross_win32.txt'
Python system: Linux
The Meson build system
Version: 0.53.2
Source dir: /home/hwong/scrcpy_lin
Build dir: /home/hwong/scrcpy_lin/build-win32-noconsole
Build type: cross build
Project name: scrcpy
Project version: 1.14
No CFLAGS in the environment, not changing global flags.
No LDFLAGS in the environment, not changing global flags.
No CPPFLAGS in the environment, not changing global flags.
Sanity testing C compiler: cc
Is cross compiler: False.
Sanity check compiler command line: cc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/sanitycheckc.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/sanitycheckc.exe -pipe -D_FILE_OFFSET_BITS=64
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
Running test binary command: /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/sanitycheckc.exe
C compiler for the build machine: cc (gcc 9.3.0 "cc (Ubuntu 9.3.0-17ubuntu1~20.04) 9.3.0")
C linker for the build machine: cc ld.bfd 2.34
Sanity testing C compiler: /usr/bin/i686-w64-mingw32-gcc
Is cross compiler: True.
Sanity check compiler command line: /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/sanitycheckc.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/sanitycheckc_cross.exe -pipe -c
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
C compiler for the host machine: /usr/bin/i686-w64-mingw32-gcc (gcc 9.3.0 "i686-w64-mingw32-gcc (GCC) 9.3-win32 20200320")
C linker for the host machine: /usr/bin/i686-w64-mingw32-gcc ld.bfd 2.34
Build machine cpu family: x86_64
Build machine cpu: x86_64
Host machine cpu family: x86
Host machine cpu: i686
Target machine cpu family: x86
Target machine cpu: i686
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpkomchfa_
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpkomchfa_/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpkomchfa_/output.obj -pipe -c -O0 

Code:
 #include <stdio.h>
        
        int main(void) {
            void * something;
            return 0;
        }
Compiler stdout:
 
Compiler stderr:
 
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp748vv4u_
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp748vv4u_/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp748vv4u_/output.obj -pipe -c -O0 

Code:
 #include <stdio.h>
        
        int main(void) { static int a[1-2*!(sizeof(void *) >= 0)]; a[0]=0; return 0; }
Compiler stdout:
 
Compiler stderr:
 
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpfv48yete
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpfv48yete/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpfv48yete/output.obj -pipe -c -O0 

Code:
 #include <stdio.h>
        
        int main(void) { static int a[1-2*!(sizeof(void *) > 0)]; a[0]=0; return 0; }
Compiler stdout:
 
Compiler stderr:
 
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpgxkhutx3
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpgxkhutx3/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpgxkhutx3/output.obj -pipe -c -O0 

Code:
 #include <stdio.h>
        
        int main(void) { static int a[1-2*!(sizeof(void *) > 1)]; a[0]=0; return 0; }
Compiler stdout:
 
Compiler stderr:
 
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp7keh6ff5
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp7keh6ff5/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp7keh6ff5/output.obj -pipe -c -O0 

Code:
 #include <stdio.h>
        
        int main(void) { static int a[1-2*!(sizeof(void *) > 3)]; a[0]=0; return 0; }
Compiler stdout:
 
Compiler stderr:
 
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpw2nanhpz
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpw2nanhpz/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpw2nanhpz/output.obj -pipe -c -O0 

Code:
 #include <stdio.h>
        
        int main(void) { static int a[1-2*!(sizeof(void *) > 7)]; a[0]=0; return 0; }
Compiler stdout:
 
Compiler stderr:
 /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpw2nanhpz/testfile.c: In function 'main':
/home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpw2nanhpz/testfile.c:3:37: error: size of array 'a' is negative
    3 |         int main(void) { static int a[1-2*!(sizeof(void *) > 7)]; a[0]=0; return 0; }
      |                                     ^

Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp22e2xhgh
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp22e2xhgh/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp22e2xhgh/output.obj -pipe -c -O0 

Code:
 #include <stdio.h>
        
        int main(void) { static int a[1-2*!(sizeof(void *) <= 5)]; a[0]=0; return 0; }
Compiler stdout:
 
Compiler stderr:
 
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpbs1ssc92
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpbs1ssc92/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpbs1ssc92/output.obj -pipe -c -O0 

Code:
 #include <stdio.h>
        
        int main(void) { static int a[1-2*!(sizeof(void *) <= 4)]; a[0]=0; return 0; }
Compiler stdout:
 
Compiler stderr:
 
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp7g6nl6l_
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp7g6nl6l_/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmp7g6nl6l_/output.obj -pipe -c -O0 --print-search-dirs 

Code:
 
Compiler stdout:
 install: /usr/lib/gcc/i686-w64-mingw32/9.3-win32/
programs: =/usr/lib/gcc/i686-w64-mingw32/9.3-win32/:/usr/lib/gcc/i686-w64-mingw32/9.3-win32/:/usr/lib/gcc/i686-w64-mingw32/:/usr/lib/gcc/i686-w64-mingw32/9.3-win32/:/usr/lib/gcc/i686-w64-mingw32/:/usr/lib/gcc/i686-w64-mingw32/9.3-win32/../../../../i686-w64-mingw32/bin/i686-w64-mingw32/9.3-win32/:/usr/lib/gcc/i686-w64-mingw32/9.3-win32/../../../../i686-w64-mingw32/bin/
libraries: =/usr/lib/gcc/i686-w64-mingw32/9.3-win32/:/usr/lib/gcc/i686-w64-mingw32/9.3-win32/../../../../i686-w64-mingw32/lib/i686-w64-mingw32/9.3-win32/:/usr/lib/gcc/i686-w64-mingw32/9.3-win32/../../../../i686-w64-mingw32/lib/../lib/:/usr/lib/gcc/i686-w64-mingw32/9.3-win32/../../../../i686-w64-mingw32/lib/

Compiler stderr:
 
Library SDL2 found: YES
Library SDL2main found: YES
Library avcodec-58 found: YES
Library avformat-58 found: YES
Library avutil-56 found: YES
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpt884vxrj
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpt884vxrj/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmpt884vxrj/output.exe -pipe -O0 -Wl,--start-group -lmingw32 -Wl,--end-group -Wl,--allow-shlib-undefined 

Code:
 int main(void) { return 0; }
Compiler stdout:
 
Compiler stderr:
 
Library mingw32 found: YES
Running compile:
Working directory:  /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmprdlblmqx
Command line:  /usr/bin/i686-w64-mingw32-gcc /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmprdlblmqx/testfile.c -o /home/hwong/scrcpy_lin/build-win32-noconsole/meson-private/tmprdlblmqx/output.exe -pipe -O0 -Wl,--start-group -lws2_32 -Wl,--end-group -Wl,--allow-shlib-undefined 

Code:
 int main(void) { return 0; }
Compiler stdout:
 
Compiler stderr:
 
Library ws2_32 found: YES
Configuring config.h using configuration
Build targets in project: 2

Found ninja-1.10.0 at /usr/bin/ninja
